Update 7.get-subgraph.md, add annotation to example of last paragraph.

--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/7.get-subgraph.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/7.get-subgraph.md
@@ -138,7 +138,6 @@ nebula> INSERT EDGE serve(start_year, end_year) VALUES "player101" -> "team204":
 
 ```ngql
 nebula> MATCH p= (v:player) -- (v2) WHERE id(v)=="A" RETURN p;
-
 nebula> GO 1 STEPS FROM "A" OVER follow YIELD src(edge),dst(edge);
 ```
 
@@ -147,6 +146,7 @@ nebula> GO 1 STEPS FROM "A" OVER follow YIELD src(edge),dst(edge);
 查询到没有多余子图数据时会停止查询，且不会返回空值。
 
 ```ngql
+# 查询从点player101开始、0~100 跳、follow类型的出边的子图。
 nebula> GET SUBGRAPH 100 STEPS FROM "player101" OUT follow YIELD VERTICES AS nodes, EDGES AS relationships;
 +----------------------------------------------------+--------------------------------------------------------------------------------------+
 | nodes                                              | relationships                                                                        |
